{
    "name": "PlayerActions",
    "maps": [
        {
            "name": "gameplay",
            "id": "e4f1e1ce-1428-4146-8c30-b8302bae929c",
            "actions": [
                {
                    "name": "move",
                    "type": "Value",
                    "id": "c7e920e0-9d04-4825-8117-3ce006e64c73",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "attack",
                    "type": "Button",
                    "id": "aa5ae083-3464-49e4-918c-9809f335e742",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "dodge",
                    "type": "Button",
                    "id": "50d08a91-0299-41ca-bba2-d98107e0ccec",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "focus",
                    "type": "Button",
                    "id": "f7a416b1-80a6-4eb3-869d-2cc561173986",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "touch",
                    "type": "Value",
                    "id": "2cb985f1-9736-4523-994e-0d633f211ecd",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "mouseAim",
                    "type": "Value",
                    "id": "b9937199-29fe-45ab-9d9e-fb0ce03954c3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "stickAim",
                    "type": "Value",
                    "id": "bdbdc6ee-a5b4-4dc2-a37c-4d7b3722e39a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9909c67-c933-4005-97c8-506c223017f3",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e10bdbe-04ca-4655-b7dc-ebabc3fad44c",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "focus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76b2a89b-60ae-4c43-9d54-a87c360218f0",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88e92138-6b05-451e-a4f0-37aef8855b75",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c7867c35-016b-4e2d-88ef-26f1ab449d80",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61acdf64-fc7d-4938-ab85-86f5a17acf9e",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "330c3b3c-a637-4416-b383-8573b711b06b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD [Keyboard]",
                    "id": "f540a0a8-d8ac-4c72-82a0-b7a92c857b39",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "94724b40-355e-4546-9cbe-8cb5407825a5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "dc78e012-b59c-46ef-87ec-eb2f59740295",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "0eb0fe20-9b99-40e6-849c-c52f9a920d0a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c4ea7221-c435-4d91-9b32-a2081958992f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "6298a3e6-fa20-4cdc-afc5-ff1083af7d27",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f61c614f-0d3f-49aa-94c3-20c3d682f42b",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "406c859c-509f-4dc4-8fef-c518a61ddcbe",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35270186-19fe-49bb-acc7-554639af7323",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b0372892-1e36-415a-8504-a384cd5d41d9",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "808854ad-335f-4d98-afc0-e9ca239c418f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "dodge",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4f392c8-7afe-404c-bb71-471d0f459dcd",
                    "path": "<Touchscreen>/touch1/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Touchscreen",
                    "action": "touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "34e203e3-ca2b-49d3-a88d-6940cabdae7d",
                    "path": "<Touchscreen>/touch0/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "touch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e07270e9-36dc-4205-b98b-bdcd45cb6059",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse+Keyboard",
                    "action": "mouseAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d5297dbf-528b-4f9d-b059-8730551571a8",
                    "path": "<Gamepad>/rightStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controller",
                    "action": "stickAim",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "01fd49b1-90aa-48bb-92dd-3067bda2bf44",
            "actions": [],
            "bindings": []
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse+Keyboard",
            "bindingGroup": "Mouse+Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Controller",
            "bindingGroup": "Controller",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Touchscreen",
            "bindingGroup": "Touchscreen",
            "devices": [
                {
                    "devicePath": "<Touchscreen>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}